# prism-dsa

./: .gitignore  Cargo.toml  LATENCY_ANALYSIS.md  PAPER.md  SPECIFICATION.md
attacks/: mldsa_toy_attack.py  phase2_bdd_attack.py  phase3_lp_attack.py  phase4_barrier_analysis.py  phase5_nonce_reuse.py  phase5_timing_leak.py  phase5_timing_real.py  phase6_dpa_timing.py  phase7_syndrome_recovery.py  phase8_full_key_recovery.py  phase9_phase_b.py  t0_usehint_recovery.py
benches/: bench.rs
docs/: DIMENSIONAL_SNR_DUALITY.md  security-proof.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_pack_unpack.rs  fuzz_sign_roundtrip.rs  fuzz_verify.rs
src/: error.rs  hash.rs  keygen.rs  lib.rs  ntt.rs  packing.rs  params.rs  poly.rs  reduce.rs  sample.rs  sign.rs  verify.rs
tests/: kat_test.rs  vectors.rs
tests/kat/: prism128_kat.txt
