[package]
name = "prism-dsa-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
prism-dsa = { path = "..", features = ["prism128"] }
rand_core = "0.6"

[[bin]]
name = "fuzz_verify"
path = "fuzz_targets/fuzz_verify.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sign_roundtrip"
path = "fuzz_targets/fuzz_sign_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "fuzz_pack_unpack"
path = "fuzz_targets/fuzz_pack_unpack.rs"
test = false
doc = false
